Additional gitignore files + css edit
Fixed look of side panel style

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,7 @@ dist
 
 # TernJS port file
 .tern-port
+Zadania domowe/zadanie domowe 1 - Mateusz Martin.png
+Zadania domowe/zadanie domowe 2 III miejsce pracy + edu.png
+Zadania domowe/zadanie domowe 2 Soft skills.png
+testing.html
