Finished Side Bar, Some changes in css code structure
Changed inappropriate IDs to classes, improved code style and hierarchy, changed theme color to full reddish.

--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,5 @@ Zadania domowe/zadanie domowe 1 - Mateusz Martin.png
 Zadania domowe/zadanie domowe 2 III miejsce pracy + edu.png
 Zadania domowe/zadanie domowe 2 Soft skills.png
 testing.html
+Zadania domowe/zadanie domowe 4 - side bar.png
+Zadania domowe/zadanie domowe 4 - kod.png
