Almost finished styling of Main page
Mainly paddings corrections

--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,6 @@ Zadania domowe/zadanie domowe 2 Soft skills.png
 testing.html
 Zadania domowe/zadanie domowe 4 - side bar.png
 Zadania domowe/zadanie domowe 4 - kod.png
+Zadania domowe/zadanie domowe 5 - h-main class.png
+Zadania domowe/zadanie domowe 5 - kod html+css.png
+Zadania domowe/zadanie domowe 5 - strona.png
